# Homecare-Hub

./: .env.example  .gitignore  CLAUDE.md  README.md  claude.md  docker-compose.yml  package.json  start_local.ps1
backend/: BACKEND.md  Dockerfile  alembic.ini  clean_db.py  migrate_db.py  package.json  pyproject.toml  test_db.py  test_routine_api.py  test_signup.py
backend/alembic/: env.py
backend/alembic/versions/: 01_04_2026_add_completion_fields_to_bookings.py  04_04_2026_add_emergency_sos_system.py  04_04_2026_add_home_number_to_users.py  04_04_2026_add_title_to_service_certificates.py  05_04_2026_add_alert_fields.py  06_04_2026_uuid_primary_keys.py  07_04_2026_add_provider_points.py  07_04_2026_recalculate_provider_ratings_from_points.py  09_04_2026_add_negotiation_and_complaints.py  11_04_2026_add_secretary_complaints.py  12_04_2026_add_final_offer_flag.py  13_04_2026_add_home_members.py  13_04_2026_add_society_contracts.py  14_04_2026_add_is_flagged.py  17_03_2026_add_society_security_and_servicer_mastery.py  17_03_2026_expand_provider_profile_and_certificates.py  22_04_2026_add_due_time_to_maintenance_tasks.py  30_03_2026_add_service_request_workflow.py  90393c05f34f_add_routine_task_fields_to_maintenance_.py  (+2 more)
backend/app/: main.py
backend/app/booking/: services.py
backend/scripts/: db_seed.py  seed_superadmin.py  user_bulk_create.py  user_custom_setup.py  user_setup.py  user_verify.py
backend/tests/: conftest.py  test_charge_submission.py  test_emergency_services.py  test_final_offer.py  test_home_member_model.py  test_society_contracts.py
(+203 files in other folders)
